# qiti

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  compile_adc_examples.sh  generate_pptx.py  generate_slides.sh  runCpplint.sh
.github/workflows/: main.yml
adc-examples/: MyPluginProcessor.h  adc_data_race_detector_example_0.cpp  adc_data_race_detector_example_1.cpp  adc_data_race_detector_example_2.cpp  adc_data_race_detector_example_3.cpp  adc_data_race_detector_example_4.cpp  adc_data_race_detector_example_5.cpp  adc_data_race_detector_example_5_2.cpp  adc_data_race_detector_example_6.cpp  adc_data_race_detector_example_7.cpp  adc_example_0.cpp  adc_example_2.cpp  adc_example_3.cpp  adc_example_4.cpp  adc_example_5.cpp  adc_example_6.cpp  adc_example_7.cpp  adc_function_profiler_example_0.cpp  adc_function_profiler_example_1.cpp  adc_function_profiler_example_2.cpp  adc_function_profiler_example_3.cpp  adc_function_profiler_example_4.cpp  adc_function_profiler_example_5.cpp  adc_function_profiler_example_6.cpp  adc_heap_alloc_tracker_example_1.cpp  adc_heap_alloc_tracker_example_4.cpp  adc_heap_alloc_tracker_example_8.cpp  adc_heap_alloc_tracker_example_9.cpp  data_race_test  instrumentation_tools_dynamic.cpp  instrumentation_tools_static.cpp  main.cpp  overview_slide.cpp  what_is_instrumentation.cpp  who_am_i.cpp
adc-examples/data_race_test.dSYM/Contents/: Info.plist
adc-examples/data_race_test.dSYM/Contents/Resources/DWARF/: data_race_test
adc-examples/data_race_test.dSYM/Contents/Resources/Relocations/aarch64/: data_race_test.yml
docs/html/: annotated.html  annotated_dup.js  classes.html  classqiti_1_1_function_call_data-members.html  classqiti_1_1_function_call_data.html  classqiti_1_1_function_call_data.js  classqiti_1_1_function_data-members.html  classqiti_1_1_function_data.html  classqiti_1_1_function_data.js  classqiti_1_1_hotspot_detector-members.html  classqiti_1_1_hotspot_detector.html  classqiti_1_1_hotspot_detector.js  classqiti_1_1_instrument-members.html  classqiti_1_1_instrument.html  classqiti_1_1_instrument.js  classqiti_1_1_instrument_a53b8dea707559ea38a8ca1be31ec0b12_cgraph.map  classqiti_1_1_instrument_a53b8dea707559ea38a8ca1be31ec0b12_cgraph.md5  classqiti_1_1_leak_sanitizer-members.html  classqiti_1_1_leak_sanitizer.html  classqiti_1_1_leak_sanitizer.js  classqiti_1_1_leak_sanitizer_a76be999285ba96d56ac4778397c7271f_cgraph.map  classqiti_1_1_leak_sanitizer_a76be999285ba96d56ac4778397c7271f_cgraph.md5  classqiti_1_1_leak_sanitizer_af2fc8dfbec6ab4c934feb22d0d10fdcf_icgraph.map  classqiti_1_1_leak_sanitizer_af2fc8dfbec6ab4c934feb22d0d10fdcf_icgraph.md5  classqiti_1_1_profile-members.html  classqiti_1_1_profile.html  classqiti_1_1_profile.js  classqiti_1_1_profile_a1668c8f1c0cdab9eb0ce8b0c68d9f986_cgraph.map  classqiti_1_1_profile_a1668c8f1c0cdab9eb0ce8b0c68d9f986_cgraph.md5  classqiti_1_1_profile_a1668c8f1c0cdab9eb0ce8b0c68d9f986_icgraph.md5  classqiti_1_1_profile_a4c60ccee61453c2bd8422d4fd0e7e221_cgraph.md5  classqiti_1_1_profile_a4c60ccee61453c2bd8422d4fd0e7e221_icgraph.map  classqiti_1_1_profile_a4c60ccee61453c2bd8422d4fd0e7e221_icgraph.md5  classqiti_1_1_profile_a527909e7177a5e5840f9caffba24e557_cgraph.map  classqiti_1_1_profile_a527909e7177a5e5840f9caffba24e557_cgraph.md5  classqiti_1_1_profile_a527909e7177a5e5840f9caffba24e557_icgraph.md5  classqiti_1_1_profile_a5a48ba90bf8ceaefb0277f537e8dc35e_cgraph.map  classqiti_1_1_profile_a5a48ba90bf8ceaefb0277f537e8dc35e_cgraph.md5  classqiti_1_1_profile_a7c2f08478bc3743ca61e27716f2e8c44_cgraph.map  classqiti_1_1_profile_a7c2f08478bc3743ca61e27716f2e8c44_cgraph.md5  (+55 more)
docs/html/search/: all_0.js  all_11.js  all_12.js  all_2.js  all_3.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+9 more)
example/source/: qiti_example.cpp  qiti_example_include.hpp
include/: qiti_include.hpp
scripts/: add_qiti_header.py  preBuild.py
source/: qiti_API.hpp  qiti_CoverageHooks.cpp  qiti_CoverageHooks.hpp  qiti_ExceptionHooks.cpp  qiti_FunctionCallData.cpp  qiti_FunctionCallData.hpp  qiti_FunctionCallData_Impl.hpp  qiti_FunctionData.cpp  qiti_FunctionData.hpp  qiti_FunctionDataUtils.cpp  qiti_FunctionDataUtils.hpp  qiti_FunctionData_Impl.hpp  qiti_HotspotDetector.cpp  qiti_HotspotDetector.hpp  qiti_Instrument.cpp  qiti_Instrument.hpp  qiti_InstrumentHooks.cpp  qiti_LeakSanitizer.cpp  qiti_LeakSanitizer.hpp  qiti_LockData.cpp  qiti_LockData.hpp  qiti_LockHooks.cpp  qiti_LockHooks.hpp  qiti_MallocHooks.cpp  qiti_MallocHooks.hpp  qiti_Profile.cpp  qiti_Profile.hpp  qiti_ReentrantSharedMutex.hpp  qiti_ScopedNoHeapAllocations.hpp  qiti_ScopedQitiTest.cpp  qiti_ScopedQitiTest.hpp  qiti_ThreadSanitizer.cpp  qiti_ThreadSanitizer.hpp  qiti_TypeData.cpp  qiti_TypeData.hpp  qiti_TypeData_Impl.hpp  qiti_Utils.cpp  qiti_Utils.hpp  qiti_instrument.cpp  qiti_instrument.hpp  (+4 more)
source/client/: qiti_client.cpp  qiti_client_executable.cpp  qiti_client_tsan_integration.cpp  qiti_tests_client.cpp
tests/: qiti_test_macros.hpp  test_qiti_CoverageHooks.cpp  test_qiti_FunctionCallData.cpp  test_qiti_FunctionData.cpp  test_qiti_FunctionDataUtils.cpp  test_qiti_HotspotDetector.cpp  test_qiti_Instrument.cpp  test_qiti_LeakSanitizer.cpp  test_qiti_LockData.cpp  test_qiti_Profile.cpp  test_qiti_ScopedNoHeapAllocations.cpp  test_qiti_ScopedQitiTest.cpp  test_qiti_ThreadSanitizer.cpp  test_qiti_TypeData.cpp  test_qiti_Utils.cpp  test_qiti_instrument.cpp  test_qiti_profile.cpp  test_qiti_utils.cpp
